# discai

./: .env.example  .gitignore  .infisical.json  .pre-commit-config.yaml  .rumdl.toml  CLAUDE.md  Dockerfile  README.md  Taskfile.yml  alembic.ini  docker-compose.yml  docker-entrypoint.dev.sh  docker-entrypoint.sh  env.ts  index.ts  mise.toml  package.json  prod.Dockerfile  pyproject.toml
.claude/skills/chat-sdk/: SKILL.md
.claude/skills/discord-py/: SKILL.md
.gitea/workflows/: deploy.yaml
.github/workflows/: deploy.yaml
db-init/: 00-extensions.sql  01-roles.sql
infra/helm/discai/: Chart.yaml  values.yaml
infra/helm/discai/templates/: configmap.yaml  deployment.yaml  secret.yaml  secrets.yaml
migrations/: env.py
migrations/versions/: 2025_02_16_1147-c5bdfee58a47_init.py
src/: __main__.py  agent.py  db.py  settings.py
src/schemas/: base.py  conversations.py
