[project]
name = "discord-ai"
version = "0.2.0"
description = ""
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "agno~=1.0",
    "alembic~=1.0",
    "anthropic~=0.45",
    "asyncpg~=0.30",
    "discord-py~=2.0",
    "duckduckgo-search~=8.0",
    "google-genai~=1.0",
    "loguru~=0.7",
    "psycopg2-binary~=2.0",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    "python-ulid~=3.0",
    "requests~=2.0",
    "sqlalchemy~=2.0",
]

[dependency-groups]
dev = [
    "ipython~=8.0",
    "ruff~=0.9",
    "watchdog[watchmedo]~=6.0",
]
